ChatService 수정: 채팅방 대화 목록 불러 올 때, msgIdx를 오름차순으로 조회하도록 수정